# unlock_pdf_password

./: .gitignore  Dockerfile  README.md  compose.yaml  pyproject.toml  tox.ini
.github/workflows/:  sync_to_hub.yml  test.yml
docker/cpu/: Dockerfile  docker-compose.yml  pyproject.toml
notebook/: helloworld.ipynb
scripts/: unlock_pdf_password.py
src/: app.py
src/unlock_pdf_password/: unlock_pdf_password.py
tests/unlock_pdf_password/: test_env.py
