[tool.poetry]
name = "unlock_pdf_password"
version = "0.1.0"
description = ""
authors = ["iamtatsuki05 <tatsukio0522@gmail.com>"]
packages = [
    { include = "unlock_pdf_password", from = "src/" },
]

[tool.poetry.dependencies]
python = "^3.10"
python-dotenv = "^1.0.0"
setuptools = "^69.0.3"
fire = "^0.5.0"
pydantic = "^2.5.3"
beautifulsoup4 = "^4.12.2"
selenium = "^4.16.0"
fastapi = "^0.108.0"
uvicorn = "^0.25.0"
matplotlib = "^3.5.1"
pandas = "^1.4.2"
seaborn = "^0.11.2"
japanize-matplotlib = "^1.1.3"
numpy = "^1.22.3"
jupyterlab = "^3.3.4"
tqdm = "^4.64.0"
scikit-learn = "^1.1.1"
openpyxl = "^3.1.2"
pikepdf = "^8.15.1"
streamlit = "^1.34.0"

[tool.poetry.group.dev.dependencies]
pytest = "^7.0.0"
ipykernel = ">=6.13.0"
autopep8 = ">=1.6.0"
autoflake = ">=1.4"
flake8 = ">=4.0.1"
flake8-isort = ">=4.1.1"
flake8-quotes = ">=3.3.1"
flake8-print = ">=4.0.0"
isort = ">=5.10.1"
black = {extras = ["jupyter"], version = "^22.6.0"}
mypy = ">=0.971"
tox = ">=3.25.1"
pre-commit = ">=3.3.3"
nbstripout = "0.6.1"

[tool.isort]
profile = "black"
line_length = 88
multi_line_output = 3
include_trailing_comma = true
skip = [".venv", ".tox"]

[tool.black]
skip-string-normalization = true
include = '\.py$'

[tool.pytest.ini_options]
testpaths = "tests/"

[tool.mypy]
python_version=3.10
files = "src/unlock_pdf_password"
ignore_missing_imports = true
disallow_untyped_defs = true
no_implicit_optional = true
allow_redefinition = true
show_error_codes = true
pretty = true
allow_untyped_globals = true

[tool.flake8]
max-line-length = 119
ignore = "D, E203, W391, W503"
exclude = " .git, .venv, __pycache__, data, dist, misc, notebooks, prof, tmp, workspacea, .tox"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
